==> hxhao2000/stm32f103/assemble/Source/Drive/LD3320.c <==
#include "LD3320.h"
#include "dht11.h"

void LD3320_main(void)
{
	uint8 nAsrRes=0;
	u8 temp = 0,humi = 0,temp_ = 0,humi_ = 0;
	LD3320_init();
	char TEMP[20],HUMI[20];
	if(!DHT11_Init()){
		 printf("\r\n EEROR! THE DHT11 HAS NO RESPOND...");
	}
	printf("\r\n THE DHT11 HAS RESPOND\r\n");
	
 	printf("1. da kai tai deng\r\n"); 
	printf("2. guan bi tai deng\r\n"); 				
	printf("3. qi dong feng shan\r\n"); 		
	printf("4. guan diao feng shan\r\n"); 			
	printf("5. zhuang tai \r\n"); 		
	nAsrStatus = LD_ASR_NONE;//初始状态：没有在作ASR     nAsrStatus   上面有定义         #define LD_ASR_NONE					0x00	//表示没有在作ASR识别

	while(1)
	{
		if(DHT11_Read_Data(&temp,&humi,&temp_,&humi_))
		{
//			printf("\r\n temp:%d.%d,humi:%d.%d \r\n",temp,temp_,humi,humi_);
			sprintf(TEMP,"temp: %d.%d degrees",temp,temp_);
			sprintf(HUMI,"humi: %d.%d %%",humi,humi_);
			LCD_String(6, 10,TEMP,12, YELLOW , BLACK);	
			LCD_String(6, 30,HUMI,12, YELLOW , BLACK);
		}
		
		
		switch(nAsrStatus)
		{
			case LD_ASR_RUNING:               //#define LD_ASR_RUNING				0x01	//表示LD3320正在作ASR识别中										
			case LD_ASR_ERROR:  break;        //#define LD_ASR_ERROR	 			0x31	//表示一次识别流程中LD3320芯片内部出现不正确的状态			
			case LD_ASR_NONE:                 //#define LD_ASR_NONE					0x00	//表示没有在作ASR识别
					nAsrStatus=LD_ASR_RUNING;     //初始状态：没有在作ASR     nAsrStatus           #define LD_ASR_NONE					0x00	//表示没有在作ASR识别
					if (RunASR()==0)//启动一次ASR识别流程：ASR初始化，ASR添加关键词语，启动ASR运算
					{		
						nAsrStatus = LD_ASR_ERROR;
						printf("erro");
					}
					break;	
			case LD_ASR_FOUNDOK:
					 nAsrRes = LD_GetResult();//一次ASR识别流程结束，去取ASR识别结果										 
					 printf("\r\n识别码:%d", nAsrRes);		
					 switch(nAsrRes)		   			//对结果执行相关操作,客户修改
						{
							case CODE_LSD:					//command "turn on fan"
								printf(" qi dong feng  shan\r\n"); 
								LED1_OFF();
								break;
							case CODE_SS:	 					//command "turn off fan"
								printf("guan diao feng  shan\r\n"); 
								LED1_ON();
								break;
							case CODE_AJCF:					//command "turn on lamp"
								printf("guan bi tai deng\r\n"); 
								LED2_ON();
								break;
							case CODE_QM:						//command "turn off lamp"
								printf("da kai tai deng\r\n");
								LED2_OFF();
								break;
							case CODE_JT:						//command "status"
								printf("zhuang tai\r\n");
								break;
							default:break;
						}	
						nAsrStatus = LD_ASR_NONE;
						break;
			case LD_ASR_FOUNDZERO:
			default:
					nAsrStatus = LD_ASR_NONE;
					break;
			}//switch
	}
}

static void LD3320_GPIO_Cfg(void)                              //初始化化IO
{	
		GPIO_InitTypeDef GPIO_InitStructure;
		RCC_APB2PeriphClockCmd(LD3320RST_GPIO_CLK | LD3320CS_GPIO_CLK,ENABLE);
		//LD_CS	/RSET
		GPIO_InitStructure.GPIO_Pin =LD3320CS_PIN;                 //GPIO_Pin_4
		GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
		GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;
		GPIO_Init(LD3320CS_GPIO_PORT,&GPIO_InitStructure);         //GPIOA
	
		GPIO_InitStructure.GPIO_Pin =LD3320RST_PIN;                //GPIO_Pin_15	
		GPIO_Init(LD3320RST_GPIO_PORT,&GPIO_InitStructure);        //GPIOB
}

static void LD3320_EXTI_Cfg(void)
{
  EXTI_InitTypeDef EXTI_InitStructure;
	NVIC_InitTypeDef NVIC_InitStructure;
  GPIO_InitTypeDef GPIO_InitStructure;
	RCC_APB2PeriphClockCmd(RCC_APB2Periph_AFIO,ENABLE);	

	RCC_APB2PeriphClockCmd(LD3320IRQ_GPIO_CLK, ENABLE);
  GPIO_InitStructure.GPIO_Pin =LD3320IRQ_PIN;
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN_FLOATING;
  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
  GPIO_Init(LD3320IRQ_GPIO_PORT, &GPIO_InitStructure);
	//外部中断线配置
  GPIO_EXTILineConfig(LD3320IRQEXIT_PORTSOURCE, LD3320IRQPINSOURCE);
  EXTI_InitStructure.EXTI_Line = LD3320IRQEXITLINE;
  EXTI_InitStructure.EXTI_Mode = EXTI_Mode_Interrupt;
  EXTI_InitStructure.EXTI_Trigger =EXTI_Trigger_Falling;
  EXTI_InitStructure.EXTI_LineCmd = ENABLE;
  EXTI_Init(&EXTI_InitStructure);
	//中断嵌套配置
  NVIC_InitStructure.NVIC_IRQChannel = LD3320IRQN;
  NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 1;
  NVIC_InitStructure.NVIC_IRQChannelSubPriority = 1;
  NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
  NVIC_Init(&NVIC_InitStructure);
}

void EXTI15_10_IRQHandler(void)
{
	if(EXTI_GetITStatus(LD3320IRQEXITLINE)!= RESET ) 
	{
		ProcessInt(); 
 		printf("进入中断\r\n");	
		EXTI_ClearFlag(LD3320IRQEXITLINE);
		EXTI_ClearITPendingBit(LD3320IRQEXITLINE);//清除LINE上的中断标志位  
	} 
}

static uint8 spi_send_byte(uint8 byte)
{
	while (SPI_I2S_GetFlagStatus(LD3320SPI, SPI_I2S_FLAG_TXE) == RESET);
	SPI_I2S_SendData(LD3320SPI,byte);
	while (SPI_I2S_GetFlagStatus(LD3320SPI,SPI_I2S_FLAG_RXNE) == RESET);
	return SPI_I2S_ReceiveData(LD3320SPI);
}
