==> yzhkj/my-code/学习stm32练习程序/STM32F1TESTYUYIN1.0/HARDWARE/LD3320/LD3320.c <==
#include "LD3320.h"
#include "DemoSound.h"
#define MP3_BEIJING_START	0x0000;
#define MP3_BEIJING_SIZE	0x08b8;
#define MP3_SHANGHAI_START	0x1000;
#define MP3_SHANGHAI_SIZE	0x0ab0;
#define MP3_TIANJIN_START	0x2000;
#define MP3_TIANJIN_SIZE	0x0a20;
#define MP3_CHONGQING_START	0x3000;
#define MP3_CHONGQING_SIZE	0x0990;
#define MP3_DING_START	0x4000;
#define MP3_DING_SIZE	0x0828;
#define MP3_NIHAO_START	0x5000;
#define MP3_NIHAO_SIZE	0x1170;

void LD3320_main(void)
{
	uint8 nAsrRes=0;
	LD3320_init();	  
 	printf("1、流水灯\r\n"); 
	printf("2、闪烁\r\n"); 				
	printf("3、按键触发\r\n"); 		
	printf("4、全灭\r\n"); 			
	printf("5、状态\r\n"); 		
	nAsrStatus = LD_ASR_NONE;//初始状态：没有在作ASR

	while(1)
	{
		switch(nAsrStatus)
		{
			case LD_ASR_RUNING:
			case LD_ASR_ERROR:		
					break;
			case LD_ASR_NONE:
					nAsrStatus=LD_ASR_RUNING;
					if (RunASR()==0)//启动一次ASR识别流程：ASR初始化，ASR添加关键词语，启动ASR运算
					{		
						nAsrStatus = LD_ASR_ERROR;
						printf("LD_ASR_ERROR\r\n");
					}
					break;
			case LD_ASR_FOUNDOK:
					 nAsrRes = LD_GetResult( );//一次ASR识别流程结束，去取ASR识别结果										 
					 printf("\r\n识别码:%d", nAsrRes);			 		
								
					 switch(nAsrRes)		   			//对结果执行相关操作,客户修改
						{
							case CODE_LSD:					//命令“流水灯”
								printf(" 流水灯 指令识别成功\r\n"); 
															 break;
							case CODE_SS:	 					//命令“闪烁”
								printf(" 闪烁 指令识别成功\r\n"); 
															 break;
							case CODE_AJCF:					//命令“按键触发”
								printf(" 按键触发 指令识别成功\r\n"); 
															break;
							case CODE_QM:						//命令“全灭”
								printf(" 全灭 指令识别成功\r\n");
															break;
							case CODE_JT:						//命令“状态”
								printf(" 状态 指令识别成功\r\n");
							
							default:break;
						}	
					nAsrStatus = LD_ASR_NONE;
					break;
			case LD_ASR_FOUNDZERO:
					printf("LD_ASR_FOUNDZERO\r\n");
			default:
					nAsrStatus = LD_ASR_NONE;
					printf("default LD_ASR_NONE\r\n");
					break;
			}//switch
		//开发板测试
		Board_text(nAsrRes );
		HAL_Delay(50);
		HAL_GPIO_TogglePin(GPIOB,GPIO_PIN_12);
	}// while
}

static void LD3320_GPIO_Cfg(void)
{	
	GPIO_InitTypeDef GPIO_InitStructure;
	
//	RCC_APB2PeriphClockCmd(LD3320RST_GPIO_CLK | LD3320CS_GPIO_CLK,ENABLE);
	//LD_CS	/RSET
	GPIO_InitStructure.Pin =LD3320CS_PIN;
	GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_LOW;
	GPIO_InitStructure.Mode = GPIO_MODE_OUTPUT_PP;
	HAL_GPIO_Init(LD3320CS_GPIO_PORT,&GPIO_InitStructure);

	GPIO_InitStructure.Pin =LD3320RST_PIN;
	GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_LOW;
	GPIO_InitStructure.Mode = GPIO_MODE_OUTPUT_PP;
	HAL_GPIO_Init(LD3320RST_GPIO_PORT,&GPIO_InitStructure);
	
	GPIO_InitStructure.Pin = LD3320WR_PIN;				
	GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_LOW;
	GPIO_InitStructure.Mode = GPIO_MODE_OUTPUT_PP;
	HAL_GPIO_Init(LD3320WR_GPIO_PORT, &GPIO_InitStructure);
	
}

static void LD3320_EXTI_Cfg(void)
{
	GPIO_InitTypeDef GPIO_Initure;
    GPIO_Initure.Pin=LD3320IRQ_PIN;               //
    GPIO_Initure.Mode=GPIO_MODE_IT_FALLING;     //下降沿触发
    GPIO_Initure.Pull=GPIO_PULLUP;
    HAL_GPIO_Init(LD3320IRQ_GPIO_PORT,&GPIO_Initure);	
   
	HAL_NVIC_SetPriority(EXTI15_10_IRQn,2,3);   //抢占优先级为2，子优先级为3
    HAL_NVIC_EnableIRQ(EXTI15_10_IRQn);         //使能中断线13  

//  EXTI_InitTypeDef EXTI_InitStructure;
//  NVIC_InitTypeDef NVIC_InitStructure;
//  GPIO_InitTypeDef GPIO_InitStructure;
//  RCC_APB2PeriphClockCmd(RCC_APB2Periph_AFIO,ENABLE);	

//  RCC_APB2PeriphClockCmd(LD3320IRQ_GPIO_CLK, ENABLE);
//  GPIO_InitStructure.GPIO_Pin =LD3320IRQ_PIN;
//  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN_FLOATING;
//  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
//  GPIO_Init(LD3320IRQ_GPIO_PORT, &GPIO_InitStructure);
//	//外部中断线配置
//  GPIO_EXTILineConfig(LD3320IRQEXIT_PORTSOURCE, LD3320IRQPINSOURCE);
//  EXTI_InitStructure.EXTI_Line = LD3320IRQEXITLINE;
//  EXTI_InitStructure.EXTI_Mode = EXTI_Mode_Interrupt;
//  EXTI_InitStructure.EXTI_Trigger =EXTI_Trigger_Falling;
//  EXTI_InitStructure.EXTI_LineCmd = ENABLE;
//  EXTI_Init(&EXTI_InitStructure);
//	//中断嵌套配置
//  NVIC_InitStructure.NVIC_IRQChannel = LD3320IRQN;
//  NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 1;
//  NVIC_InitStructure.NVIC_IRQChannelSubPriority = 1;
//  NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
//  NVIC_Init(&NVIC_InitStructure);
}

void EXTI15_10_IRQHandler(void)
{
	HAL_GPIO_EXTI_IRQHandler(LD3320IRQ_PIN);
//	if(EXTI_GetITStatus(LD3320IRQEXITLINE)!= RESET ) 
//	{
//		ProcessInt(); 
// 		printf("进入中断12\r\n");	
//		EXTI_ClearFlag(LD3320IRQEXITLINE);
//		EXTI_ClearITPendingBit(LD3320IRQEXITLINE);//清除LINE上的中断标志位  
//	} 
}

static uint8 spi_send_byte(uint8 byte)
{

    uint8 TxData=byte;
	uint8 RxData;
	int state=5;
    state=HAL_SPI_TransmitReceive(&hspi1,&TxData,&RxData,1, 1000); 
//	printf("spi state:%d\r\n",state);
 	return RxData; 
	
//	while (SPI_I2S_GetFlagStatus(LD3320SPI, SPI_I2S_FLAG_TXE) == RESET);
//	SPI_I2S_SendData(LD3320SPI,byte);
//	while (SPI_I2S_GetFlagStatus(LD3320SPI,SPI_I2S_FLAG_RXNE) == RESET);
//	return SPI_I2S_ReceiveData(LD3320SPI);	
}
